# beardmachine

./: CMakeLists.txt  architecture.txt  beard_cpu.c  beard_cpu.h
program/: count_cells.bs
scripts/: assembler.py
src/: beard_cpu.c  beard_cpu.h  main.c
